--- a/Coder Swag/Base.lproj/Main.storyboard
+++ b/Coder Swag/Base.lproj/Main.storyboard
@@ -158,6 +158,7 @@
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="130" id="XnP-ow-6ZD"/>
                                                     </constraints>
+                                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Devslopes Logo Graphics T-Shirt" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zDL-kH-4Me">
                                                     <rect key="frame" x="5" y="140" width="192" height="45"/>
